Added Unit Test for Action Rules